--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
 
 	<style>
 		body {
-			margin:0px;
-			padding:0px;
-			background:#222222;
+			margin:0;
+			padding:0;
+			overflow: hidden;
 		}
 		canvas {
-			background:#ffffff;
-			position:absolute;
-			top:50%;
-			left:50%;
-			margin-left:-400px;
-			margin-top:-280px;
+			margin:auto;
 		}
 	</style>
 </head>
